<resources>
    <string name="app_name">Mapping</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="btn">Locate</string>
    <string name="choosemap">Choose map</string>
    <string name="regularview">Regular View</string>
    <string name="cyclemapview">Cycle View</string>
    <string name="setLocation">Set Location</string>
    <string name="listTitle">Map Style</string>
    <string name="title_activity_my_preferece">MyPrefereceActivity</string>
    <string name="preference">Preference</string>
    <string name="zoom">Zoom Level</string>

</resources>
