<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lat"
            android:id="@+id/lattxt"
            style="@style/SearchBoxText"
            />
        <EditText
            android:id="@+id/latitude"
            style="@style/SearchBoxEdit"
            />
        <TextView
            android:text="@string/lon"
            android:id="@+id/lontxt"
            style="@style/SearchBoxText"
            />
        <EditText
            android:id="@+id/longitude"
            style="@style/SearchBoxEdit"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchLocation"
        android:text="@string/btn"/>

    <org.osmdroid.views.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="true"
        android:clickable="true"
        android:id="@+id/map1"
        tilesource="Mapnik"
        />
</LinearLayout>
